--- a/hover with 4 box overflow/style.css
+++ b/hover with 4 box overflow/style.css
@@ -3,7 +3,7 @@
     width: 400px;
     background-color: red;
     position: absolute;
-    left: 500;
+    left: 500px;
     overflow: hidden;
     
 }
@@ -12,6 +12,7 @@
     position: absolute;
     top: 20px;
     left: 20%;
+    z-index: 1;
     
 }
 .red::before{
@@ -20,7 +21,8 @@
     width: 50%;
     background-color: purple;
     position: absolute;
-    left: -200;    
+    left: -200px; 
+    /* overflow: hidden;    */
 }
 .red:hover::before{
     left: 0%;
@@ -33,6 +35,7 @@
     background-color: blue;
     position: absolute;
     right: -200px;
+   
 }
 .red:hover::after{
     right: 0%;
@@ -71,7 +74,8 @@
     width: 400px;
     background-color: red;
     position: absolute;
-    left: 2000;
+    left: 2000px;
+   
     
     
 }
@@ -81,10 +85,11 @@
     width: 50%;
     background-color: purple;
     position: absolute;
-    left: -200;    
+    left: -50%;  
+    
 }
 .red1:hover::before{
-    left: 0%;
+    left: 100px;
     transition: 2s;
 }
 .red1::after{
